efi_paper.bib, efi_template.docx; meta; Updated formatting (fixed colors on note2team format) and added LHS and a couple other references

--- a/efi_paper.bib
+++ b/efi_paper.bib
@@ -179,6 +179,18 @@ While patients with higher SES were less likely to be admitted, the impact of SE
   pmid = {24823956}
 }
 
+@misc{bokov20,
+  title = {Bokov/{{FreeFI}}: {{First Release}}},
+  shorttitle = {Bokov/{{FreeFI}}},
+  author = {Bokov, Alex},
+  year = {2020},
+  month = sep,
+  doi = {10.5281/ZENODO.4053088},
+  abstract = {Open Frailty Index: Rockwood methodology applied to EMR data},
+  copyright = {Open Access},
+  howpublished = {Zenodo}
+}
+
 @article{brahmbhatt16,
   title = {Gender and Frailty Predict Poor Outcomes in Infrainguinal Vascular Surgery},
   author = {Brahmbhatt, Reshma and Brewster, Luke P. and Shafii, Susan and Rajani, Ravi R. and Veeraswamy, Ravi and Salam, Atef and Dodson, Thomas F. and Arya, Shipra},
@@ -519,6 +531,19 @@ County-level SES data are modestly associated with 30-day outcomes for CMS benef
   journal = {Medical Care}
 }
 
+@techreport{enticott20,
+  title = {Leadership {{Perspectives}} on {{Learning Health Systems}}: A Qualitative Study},
+  shorttitle = {Leadership {{Perspectives}} on {{Learning Health Systems}}},
+  author = {Enticott, Joanne and Braaf, Sandy and Johnson, Alison and Jones, Angela and Teede, Helena},
+  year = {2020},
+  month = jun,
+  institution = {{In Review}},
+  doi = {10.21203/rs.3.rs-35988/v1},
+  abstract = {Abstract                        Background:             Integrated utilisation of digital health data has the power to transform healthcare to deliver more efficient and effective services, and the learning health system (LHS) is emerging as a model to achieve this. The LHS uses routine data from service delivery and patient care to generate knowledge to continuously improve healthcare. The aim of this project was to explore key features of a successful and sustainable LHS to inform implementation in an Academic Health Science Centre context.             Methods:             We purposively identified and conducted semi-structured qualitative interviews with leaders, experienced in supporting or developing data driven innovations in healthcare. A thematic analysis using NVivo was undertaken.             Results:             Analysis of 26 interviews revealed five themes thought to be integral in an effective, sustainable LHS: (1) Systematic approaches and iterative, continuous learning with implementation into healthcare contributing to new best-practice care; (2) Broad stakeholder, clinician and academic engagement, with collective vision, leadership, governance and a culture of trust, transparency and co-design; (3) Skilled workforce, capability and capacity building; (4) Resources with sustained investment over time and; (5) Data access, systems and processes being integral to a sustainable LHS.             Conclusions:             This qualitative study provides insights into the elements of a sustainable LHS across a range of leaders in data-driven healthcare improvement. Fundamentally, an LHS requires continuous learning with implementation of new evidence back into frontline care to improve outcomes. Structure, governance, trust, culture, vision and leadership were all seen as important along with a skilled workforce and sustained investment. Processes and systems to optimise access to quality data were also seen as vital in an effective, sustainable LHS. These findings will inform a co-designed framework for implementing a sustainable LHS within the Australian healthcare and Academic Health Science Centre context. It is anticipated that application of these findings will assist to embed and accelerate the use of routine health data to continuously generate new knowledge and ongoing improvement in healthcare delivery and health outcomes.},
+  file = {/home/a/Zotero/storage/SL7WN53S/Enticott et al. - 2020 - Leadership Perspectives on Learning Health Systems.pdf},
+  type = {Preprint}
+}
+
 @article{ernst14,
   title = {Surgical {{Palliative Care Consultations Over Time}} in {{Relationship}} to {{Systemwide Frailty Screening}}},
   author = {Ernst, Katherine F. and Hall, Daniel E. and Schmid, Kendra K. and Seever, Georgia and Lavedan, Pierre and Lynch, Thomas G. and Johanning, Jason Michael},
@@ -700,6 +725,20 @@ Financial incentives may be effective in changing healthcare professional practi
   pmid = {21735443}
 }
 
+@article{friedman14,
+  title = {Toward a Science of Learning Systems: A Research Agenda for the High-Functioning {{Learning Health System}}},
+  shorttitle = {Toward a Science of Learning Systems},
+  author = {Friedman, C. and Rubin, J. and Brown, J. and Buntin, M. and Corn, M. and Etheredge, L. and Gunter, C. and Musen, M. and Platt, R. and Stead, W. and Sullivan, K. and Van Houweling, D.},
+  year = {2014},
+  month = oct,
+  pages = {amiajnl-2014-002977},
+  issn = {1067-5027, 1527-974X},
+  doi = {10.1136/amiajnl-2014-002977},
+  file = {/home/a/Zotero/storage/92LQ9LFC/Friedman et al. - 2014 - Toward a science of learning systems a research a.pdf},
+  journal = {Journal of the American Medical Informatics Association},
+  language = {en}
+}
+
 @article{friebel16,
   title = {The Multiple Aims of Pay-for-Performance and the Risk of Unintended Consequences},
   author = {Friebel, Rocco and Steventon, Adam},
@@ -713,7 +752,7 @@ Financial incentives may be effective in changing healthcare professional practi
 
 HRRP aimed to `reward hospitals that are successful in reducing avoidable readmissions'3 and indeed Medicare has seen a decline in 30-day, all-cause readmission rates since the policy was introduced in 2012.4 More specific declines have been observed for the three conditions initially targeted, namely acute myocardial infarction, heart failure and pneumonia (figure 1).1 ,5 The HRRP was expanded to cover chronic obstructive pulmonary disease, total hip arthroplasty and total knee arthroplasty from 2015.
 
-Figure~1 
+Figure~1
 Trend in national Medicare 30-day readmission rates for index admissions for heart failure, heart attack, pneumonia and all-cause Medicare readmissions.1 ,4
 
 While no study has been able to test causality against a counterfactual, on the face of it HRRP has contributed to a sustained focus on readmissions and potentially, improved patient care nationally. But what aspects of quality do readmission rates measure? And what are we to make of the findings reported in this issue of BMJ Quality and Safety ,6 which indicate that, like other pay-for-performance programmes, readmission penalties have disproportionately affected safety-net hospitals (ie, hospitals that serve a high number of patients of lower socioeconomic status (SES), often uninsured).
@@ -801,6 +840,19 @@ CONCLUSIONS: Differences in surgery readmissions between SNHs and non-SNHs are d
   journal = {The Journals of Gerontology Series A: Biological Sciences and Medical Sciences},
   language = {en},
   number = {8}
+}
+
+@book{grossmann11,
+  title = {Digital Infrastructure for the Learning Health System: The Foundation for Continuous Improvement in Health Care : Workshop Series Summary},
+  shorttitle = {Digital Infrastructure for the Learning Health System},
+  author = {Grossmann, Claudia and Powers, Brian and McGinnis, J. Michael and {Institute of Medicine (U.S.)} and {Roundtable on Value \& Science-Driven Health Care}},
+  year = {2011},
+  publisher = {{National Academies Press}},
+  address = {{Washington, D.C.}},
+  abstract = {"Like many other industries, health care is increasingly turning to digital information and the use of electronic resources. The Institute of Medicine's Roundtable on Value \& Science-Driven Health Care hosted three workshops to explore current efforts and opportunities to accelerate progress in improving health and health care with information technology systems."--Publisher's description.},
+  annotation = {OCLC: 762137021},
+  isbn = {978-0-309-15417-8},
+  language = {English}
 }
 
 @article{haider16,
@@ -1019,6 +1071,21 @@ INTERPRETATION: A cut-point of more than 0.21 can be used to identify frail seni
   abstract = {In establishing prognostic models, often aided by machine learning methods, much effort is concentrated in identifying good predictors. However, the same level of rigor is often absent in improving the outcome side of the models. In this study, we focus on this rather neglected aspect of model development. We are particularly interested in the use of longitudinal information as a way of improving the outcome side of prognostic models. This involves optimally characterizing individuals' outcome status, classifying them, and validating the formulated prediction targets. None of these tasks are straightforward, which may explain why longitudinal prediction targets are not commonly used in practice despite their compelling benefits. As a way of improving this situation, we explore the joint use of empirical model fitting, clinical insights, and cross-validation based on how well formulated targets are predicted by clinically relevant baseline characteristics (antecedent validators). The idea here is that all these methods are imperfect but can be used together to triangulate valid prediction targets. The proposed approach is illustrated using data from the longitudinal assessment of manic symptoms study.},
   journal = {Statistical Methods in Medical Research},
   language = {en}
+}
+
+@article{johnston20,
+  title = {Relationship of a {{Claims}}-{{Based Frailty Index}} to {{Annualized Medicare Costs}}: {{A Cohort Study}}},
+  shorttitle = {Relationship of a {{Claims}}-{{Based Frailty Index}} to {{Annualized Medicare Costs}}},
+  author = {Johnston, Kenton J. and Wen, Hefei and Joynt Maddox, Karen E.},
+  year = {2020},
+  month = apr,
+  volume = {172},
+  pages = {533},
+  issn = {0003-4819},
+  doi = {10.7326/M19-3261},
+  journal = {Annals of Internal Medicine},
+  language = {en},
+  number = {8}
 }
 
 @article{joynt11,
@@ -1413,6 +1480,23 @@ LEVEL OF EVIDENCE: Prognostic Level III. See instructions for Authors for a comp
   pmid = {27535441}
 }
 
+@article{mclachlan19,
+  title = {{{LAGOS}}: Learning Health Systems and How They Can Integrate with Patient Care},
+  shorttitle = {{{LAGOS}}},
+  author = {McLachlan, Scott and Dube, Kudakwashe and Kyrimi, Evangelia and Fenton, Norman},
+  year = {2019},
+  month = oct,
+  volume = {26},
+  pages = {e100037},
+  issn = {2632-1009},
+  doi = {10.1136/bmjhci-2019-100037},
+  abstract = {Problem               Learning health systems (LHS) are an underexplored concept. How LHS will operate in clinical practice is not well understood. This paper investigates the relationships between LHS, clinical care process specifications (CCPS) and the established levels of medical practice to enable LHS integration into daily healthcare practice.                                         Methods               Concept analysis and thematic analysis were used to develop an LHS characterisation. Pathway theory was used to create a framework by relating LHS, CCPS, health information systems and the levels of medical practice. A case study approach evaluates the framework in an established health informatics project.                                         Results               Five concepts were identified and used to define the LHS learning cycle. A framework was developed with five pathways, each having three levels of practice specificity spanning population to precision medicine. The framework was evaluated through application to case studies not previously understood to be LHS.                                         Discussion               Clinicians show limited understanding of LHS, increasing resistance and limiting adoption and integration into care routine. Evaluation of the presented framework demonstrates that its use enables: (1) correct analysis and characterisation of LHS; (2) alignment and integration into the healthcare conceptual setting; (3) identification of the degree and level of patient application; and (4) impact on the overall healthcare system.                                         Conclusion               This paper contributes a theoretical framework for analysis, characterisation and use of LHS. The framework allows clinicians and informaticians to correctly identify, characterise and integrate LHS within their daily routine. The overall contribution improves understanding, practice and evaluation of the LHS application in healthcare.},
+  file = {/home/a/Zotero/storage/Q8Y54F69/McLachlan et al. - 2019 - LAGOS learning health systems and how they can in.pdf},
+  journal = {BMJ Health \& Care Informatics},
+  language = {en},
+  number = {1}
+}
+
 @article{melin15,
   title = {Preoperative Frailty {{Risk Analysis Index}} to Stratify Patients Undergoing Carotid Endarterectomy},
   author = {Melin, Alyson A. and Schmid, Kendra K. and Lynch, Thomas G. and Pipinos, Iraklis I. and Kappes, Steven and Longo, G. Matthew and Gupta, Prateek K. and Johanning, Jason M.},
@@ -1425,6 +1509,19 @@ LEVEL OF EVIDENCE: Prognostic Level III. See instructions for Authors for a comp
   journal = {Journal of Vascular Surgery},
   language = {en},
   number = {3}
+}
+
+@article{melder20,
+  title = {An {{Overview}} of {{Healthcare Improvement}}: {{Unpacking}} the {{Complexity}} for {{Clinicians}} and {{Managers}} in a {{Learning Health System}}},
+  shorttitle = {An {{Overview}} of {{Healthcare Improvement}}},
+  author = {Melder, Angela and Robinson, Tracy and Mcloughlin, Ian and Iedema, Rick and Teede, Helena},
+  year = {2020},
+  month = may,
+  pages = {imj.14876},
+  issn = {1444-0903, 1445-5994},
+  doi = {10.1111/imj.14876},
+  journal = {Internal Medicine Journal},
+  language = {en}
 }
 
 @article{melin15a,
@@ -1635,19 +1732,19 @@ CONCLUSIONS: Complications requiring ICU care represent a significant morbidity 
   issn = {1079-5006, 1758-535X},
   doi = {10.1093/gerona/glz017},
   abstract = {Abstract
-            
+
               Background
               The accumulation of deficits model for frailty has been used to develop an electronic health record (EHR) frailty index (eFI) that has been incorporated into British guidelines for frailty management. However, there have been limited applications of EHR-based approaches in the United States.
-            
-            
+
+
               Methods
               We constructed an adapted eFI for patients in our Medicare Accountable Care Organization (ACO, N = 12,798) using encounter, diagnosis code, laboratory, medication, and Medicare Annual Wellness Visit (AWV) data from the EHR. We examined the association of the eFI with mortality, health care utilization, and injurious falls.
-            
-            
+
+
               Results
               The overall cohort was 55.7\% female, 85.7\% white, with a mean age of 74.9 (SD = 7.3) years. In the prior 2 years, 32.1\% had AWV data. The eFI could be calculated for 9,013 (70.4\%) ACO patients. Of these, 46.5\% were classified as prefrail (0.10 {$<$} eFI {$\leq$} 0.21) and 40.1\% frail (eFI {$>$} 0.21). Accounting for age, comorbidity, and prior health care utilization, the eFI independently predicted all-cause mortality, inpatient hospitalizations, emergency department visits, and injurious falls (all p {$<$} .001). Having at least one functional deficit captured from the AWV was independently associated with an increased risk of hospitalizations and injurious falls, controlling for other components of the eFI.
-            
-            
+
+
               Conclusions
               Construction of an eFI from the EHR, within the context of a managed care population, is feasible and can help to identify vulnerable older adults. Future work is needed to integrate the eFI with claims-based approaches and test whether it can be used to effectively target interventions tailored to the health needs of frail patients.},
   journal = {The Journals of Gerontology: Series A},
